syntax = "proto3";

option go_package = "protos/calculate";

package calculate;

service CalculateService {
    // unary call
    rpc CalculateSum (CalculateSumRequest) returns (CalculateSumResponse) {};
    
    // server streaming 
    rpc PrimeNumberDecomposition (PrimeNumberDecompositionReq) returns (stream PrimeNumberDecompositionRes) {} ;
    
    // client streaming
    rpc ComputeAverage (stream ComputeAverageReq) returns (ComputeAverageRes) {};
    
    // duplex rpc
    rpc FindMaximum (stream FindMaximumReq) returns (stream FindMaximumRes) {};
}
message CalculateSumRequest {
    int32 first_num = 1;
    int32 second_num = 2;
}
message CalculateSumResponse {
    int32 result = 1;
}

message PrimeNumberDecompositionReq {
    int32 number = 1;
}

message PrimeNumberDecompositionRes {
    int32 result = 1;
}

message ComputeAverageReq {
    int32 number = 1;
}

message ComputeAverageRes {
    double average = 1;
}

message FindMaximumReq {
    int32 number = 1;
}

message FindMaximumRes {
    int32 result = 1;
}